still fixing neighbour list now with varying maxNeighbours

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -165,17 +165,9 @@
     <None Include="shaders\pass2prefix.comp" />
     <None Include="shaders\pass3prefix.comp" />
     <None Include="shaders\reorder.comp" />
-    <None Include="shaders\reset.comp" />
-    <None Include="shaders\floor.frag" />
-    <None Include="shaders\floor.vert" />
     <None Include="shaders\particle.frag" />
     <None Include="shaders\particle.vert" />
-    <None Include="shaders\particleDenPre.comp" />
-    <None Include="shaders\particleReorder.comp" />
-    <None Include="shaders\particlePrefix.comp" />
-    <None Include="shaders\particleTrail.comp" />
-    <None Include="shaders\particleUpdate.comp" />
-    <None Include="shaders\pressure.comp" />
+    <None Include="shaders\resetShader.comp" />
     <None Include="shaders\timeIntegration.comp" />
     <None Include="shaders\updateDensity.comp" />
     <None Include="shaders\computePressure.comp" />
