--- a/Firework/Firework.vcxproj.filters
+++ b/Firework/Firework.vcxproj.filters
@@ -58,21 +58,12 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\floor.frag" />
-    <None Include="shaders\floor.vert" />
     <None Include="shaders\particle.frag" />
     <None Include="shaders\particle.vert" />
-    <None Include="shaders\particleUpdate.comp" />
-    <None Include="shaders\particlePrefix.comp" />
-    <None Include="shaders\particleTrail.comp" />
-    <None Include="shaders\particleReorder.comp" />
-    <None Include="shaders\particleDenPre.comp" />
-    <None Include="shaders\pressure.comp" />
     <None Include="shaders\count.comp" />
     <None Include="shaders\pass1prefix.comp" />
     <None Include="shaders\reorder.comp" />
     <None Include="shaders\buildNeighbourList.comp" />
-    <None Include="shaders\reset.comp" />
     <None Include="shaders\updateDensity.comp" />
     <None Include="shaders\updateViscosity.comp" />
     <None Include="shaders\computePressure.comp" />
@@ -80,6 +71,7 @@
     <None Include="shaders\timeIntegration.comp" />
     <None Include="shaders\pass2prefix.comp" />
     <None Include="shaders\pass3prefix.comp" />
+    <None Include="shaders\resetShader.comp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="smoke.png">
