cleaning up: getting ready to fix SPH implementation

--- a/Firework/Firework.vcxproj
+++ b/Firework/Firework.vcxproj
@@ -147,7 +147,7 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SPHSim.cpp" />
-    <ClCompile Include="PointHashGridSearcher3.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="stb_image.cpp" />
   </ItemGroup>
@@ -155,7 +155,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="SPHSim.h" />
-    <ClInclude Include="PointHashGridSearcher3.h" />
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
   </ItemGroup>
